cmake_minimum_required(VERSION 3.22)
project(SDA_Ecedi_Alexandru_312)

set(CMAKE_CXX_STANDARD 14)

add_executable(SDA_Ecedi_Alexandru_312 main.cpp Utilizator.cpp Utilizator.h Array.h ArboreBinarCautare.h Eveniment.cpp Eveniment.h Service.cpp Service.h Conversatie.cpp Conversatie.h Lista.h Ui.cpp Ui.h)
